--- a/01_Intro_to_Jupyter.ipynb
+++ b/01_Intro_to_Jupyter.ipynb
@@ -15,19 +15,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "6\n"
      ]
     }
    ],
    "source": [
-    "x=5\n",
+    "x=6\n",
+    "\n",
     "print(x)"
    ]
   },
@@ -71,19 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi Matt!\n"
+      "Hi Tavis!\n"
      ]
     }
    ],
    "source": [
-    "name = 'Matt'\n",
+    "name = 'Tavis'\n",
     "print(f'Hi {name}!')"
    ]
   },
